install wayland session file
fix T4885

--- a/data/session/enlightenment.desktop.in
+++ b/data/session/enlightenment.desktop.in
@@ -35,3 +35,5 @@ Comment[tr]=Enlightenment kullanarak giriş yaın (Version @VERSION@)
 Icon=@prefix@/share/enlightenment/data/images/enlightenment.png
 TryExec=@prefix@/bin/enlightenment_start
 Exec=@prefix@/bin/enlightenment_start
+Type=Application
+DesktopNames=Enlightenment
