--- a/src/modules/wl_drm/meson.build
+++ b/src/modules/wl_drm/meson.build
@@ -1,6 +1,8 @@
 if get_option('wayland') != true or dep_ecore_drm2.found() != true
   disable = true
 else
+  deps = [dependency('elput')]
+
   src = files(
     'e_mod_main.c'
   )
