fix undefined variable warnings for meson build

--- a/data/session/meson.build
+++ b/data/session/meson.build
@@ -1,5 +1,6 @@
 desktop_config = configuration_data()
 desktop_config.set('prefix', dir_prefix)
+desktop_config.set('VERSION', e_version_rev)
 e_desktop = configure_file(input        : 'enlightenment.desktop.in',
                output       : 'enlightenment.desktop',
                configuration: desktop_config
