--- a/data/units/meson.build
+++ b/data/units/meson.build
@@ -1,8 +1,10 @@
+unit_config = configuration_data()
+unit_config.set('prefix', dir_prefix)
 if get_option('systemd') == true
   configure_file(input        : 'enlightenment.service.in',
                  output       : 'enlightenment.service',
                  install      : true,
                  install_dir  : systemd_unitdir,
-                 configuration: config_h
+                 configuration: unit_config
                 )
 endif
