fix undefined symbols on autotools+wayland build

--- a/configure.ac
+++ b/configure.ac
@@ -682,7 +682,7 @@ AC_SUBST([SOUND_CFLAGS])
 AC_SUBST([SOUND_LIBS])
 
 if test "x${e_cv_want_wayland_only}" != "xno" ;then
-  PKG_CHECK_MODULES([WAYLAND], [ecore-wl2 >= 1.18 wayland-server >= 1.11.0 wayland-client >= 1.11.0 wayland-protocols >= 1.9 wayland-scanner >= 1.11.0 xkbcommon uuid],
+  PKG_CHECK_MODULES([WAYLAND], [ecore-wl2 >= 1.18 wayland-server >= 1.11.0 wayland-client >= 1.11.0 wayland-protocols >= 1.9 wayland-scanner >= 1.11.0 xkbcommon uuid efl-wl],
     [
       have_wayland=yes
       have_wayland_dep=true
