improve meson build module disabling
ref 61ddcb25e6075e5e6a5436dc6f981e45317c5d7d

--- a/src/modules/meson.build
+++ b/src/modules/meson.build
@@ -78,6 +78,7 @@ mods = [
 
 foreach m: mods
   desktop_only = false
+  disable      = false
   no_icon      = false
   cargs        = ''
   data         = []
@@ -87,13 +88,14 @@ foreach m: mods
   _dir_bin     = join_paths(_dir, module_arch)
 
   opt = '-'.join(m.split('_'))
-  disable = get_option(opt)
 
-  if disable == true
+  if get_option(opt) == true
     subdir(m)
+  else
+    disable = true
   endif
 
-  if disable == true
+  if disable == false
 
     _inc2 = []
     foreach i: inc
