meson: make it possible to set the path for eet
Follow the approach of edje_cc and eldbus-codegen which detecting the
eet binary.

--- a/config/meson.build
+++ b/config/meson.build
@@ -1,13 +1,14 @@
 dir_config = join_paths(dir_data, 'enlightenment/data/config')
 
-eet = find_program('eet')
-gen_eet = generator(eet,
-                    output   : '@BASENAME@.cfg',
-                    arguments: ['-e', '@OUTPUT@', 'config', '@INPUT@', '1'])
+eet_cmd = get_option('eet')
+if eet_cmd == ''
+  eet_cmd = join_paths(dep_eet.get_pkgconfig_variable('prefix'),
+                        'bin', 'eet')
+endif
 
 custom_target('profile.src',
               input      : 'profile.src',
-              command    : [eet, '-i', '@OUTPUT@', 'config', '@INPUT@', '1'],
+              command    : [eet_cmd, '-i', '@OUTPUT@', 'config', '@INPUT@', '1'],
               output     : ['profile.cfg'],
               install    : true,
               install_dir: dir_config
