meson: fix build
everything that includes e.h needs deps_e as dependencys, otherwise headers may not be found

--- a/src/modules/meson.build
+++ b/src/modules/meson.build
@@ -82,12 +82,14 @@ foreach m: mods
   no_icon      = false
   cargs        = ''
   data         = []
-  deps         = []
+  deps         = deps_e
   inc          = []
   _dir         = join_paths(dir_module_e, m)
   _dir_bin     = join_paths(_dir, module_arch)
 
   opt = '-'.join(m.split('_'))
+
+  
 
   if get_option(opt) == true
     subdir(m)
