Give to gettext correct options to make it able to run.

--- a/po/meson.build
+++ b/po/meson.build
@@ -1,5 +1,15 @@
 if get_option('nls')
   i18n = import('i18n')
-  i18n.gettext('enlightenment')
+  i18n.gettext('enlightenment',
+             args: [
+                '--keyword=_',
+                '--keyword=d_:1',
+                '--keyword=P_:1,2',
+                '--keyword=dP_:1,2',
+                '--keyword=N_',
+                '--keyword=NP_:1,2',
+                '--from-code=UTF-8',
+                '--foreign-user'
+              ])
   config_h.set('HAVE_GETTEXT', '1')
 endif
