don't require E_START env var to be set when running on valgrind
make manually valgrinding easier

--- a/src/bin/meson.build
+++ b/src/bin/meson.build
@@ -225,7 +225,8 @@ src = [
   'efx/efx_rotate.c',
   'efx/efx_spin.c',
   'efx/efx_util.c',
-  'efx/efx_zoom.c'
+  'efx/efx_zoom.c',
+  'valgrind.h'
 ]
 
 hdr = [
