e auth - move all auth to child process only (e_ckpasswd).
this should fix T6211 ensuring no drivers can cause a segfault at exit
time. this also happens to remove the enlightenment_sys -z option for
openbsd and unifies all the passwd checking into the single
enlightenment_ckpasswd binary util (that has ifdefs for openbsd,
freebsd and linux pam in it).

this simplifies code removing a mess of auth being done in multiple
places, removes special fork vs run 1 exe or a different exe in
different cases making it more maintainable. yes - this requires
enlightenment_ckpasswd to be setuid root, but it already was when it
was built.

@fix

--- a/src/bin/meson.build
+++ b/src/bin/meson.build
@@ -35,8 +35,14 @@ deps_e = [
   dep_intl
 ]
 
+deps_ckpass = [ ]
+
+if freebsd == true
+  deps_ckpass += dep_crypt
+endif
+
 if config_h.has('HAVE_PAM') == true
-  deps_e += dep_pam
+  deps_ckpass += dep_pam
 endif
 
 requires_e = ' '.join([
@@ -553,16 +559,15 @@ executable('enlightenment_sys',
           )
 suid_exes += join_paths(dir_e_utils, 'enlightenment_sys')
 
-if freebsd == true
-  executable('enlightenment_ckpasswd',
-             'e_ckpasswd_main.c',
-             dependencies : [ dep_crypt ],
-             c_args       : suid_cflags,
-             link_args    : suid_ldflags,
-             install_dir  : dir_e_utils,
-             install      : true
-            )
-  suid_exes += join_paths(dir_e_utils, 'enlightenment_ckpasswd')
-endif
+executable('enlightenment_ckpasswd',
+           'e_ckpasswd_main.c',
+           include_directories: include_directories('../..'),
+           dependencies : deps_ckpass,
+           c_args       : suid_cflags,
+           link_args    : suid_ldflags,
+           install_dir  : dir_e_utils,
+           install      : true
+          )
+suid_exes += join_paths(dir_e_utils, 'enlightenment_ckpasswd')
 
 subdir('e_fm')
