--- a/meson.build
+++ b/meson.build
@@ -38,7 +38,7 @@ release = 'ver-0.23'
 add_global_arguments('-DHAVE_CONFIG_H=1', language: 'c')
 dir_prefix    = get_option('prefix')
 dir_bin       = join_paths(dir_prefix, get_option('bindir'))
-dir_sysconf   = join_paths(dir_prefix, get_option('sysconfdir'))
+dir_sysconf   = get_option('sysconfdir')
 dir_data      = join_paths(dir_prefix, get_option('datadir'))
 dir_include   = join_paths(dir_prefix, get_option('includedir'))
 dir_include_e = join_paths(dir_include, proj)
