build - make pam a requirement on non-bsd unless disabled
this shou,ld provide a compile failure for when no pam headers are
found and thus pam not enabled if we need pam for auth (i.e. linux).
so it'll be harder to foot-shoot now.also an add-on fix to T6779

--- a/meson.build
+++ b/meson.build
@@ -191,6 +191,10 @@ if get_option('pam') == true
   if cc.has_header('security/pam_appl.h')
     config_h.set('HAVE_PAM', '1')
     dep_pam = cc.find_library('pam', required: true)
+  else
+    if openbsd == false and freebsd == false
+      error('PAM is not disabled and not found on non-free+open BSD platforms')
+    endif
   endif
 endif
 
