bluez5 support - a new module with gadget etc.
Summary:
bluez4 support is now basically dead. nothing ships it anymore. bluez5
is a new api that is rather different so new code. also a new gui with
more complete features etc.

not everything is done as i'd like. need:

1. many more icons for device types (60-70 maybe?)
2. a few specific custom icons for some action buttons (like
pair/unpair)
3. icons for group headers
4. gadget status - the gagdte itself displays zero status. it's a
button to display a popup. that's all.

Reviewers: zmike!

Subscribers: devilhorns, cedric

Tags: #enlightenment-git

Differential Revision: https://phab.enlightenment.org/D6148

--- a/meson_options.txt
+++ b/meson_options.txt
@@ -111,6 +111,10 @@ option('bluez4',
 	type: 'boolean',
 	value: true,
 	description: 'enable bluez4 module: (default=true)')
+option('bluez5',
+	type: 'boolean',
+	value: true,
+	description: 'enable bluez5 module: (default=true)')
 option('clock',
 	type: 'boolean',
 	value: true,
