--- a/.arcconfig
+++ b/.arcconfig
@@ -1,4 +1,6 @@
 {
-  "project_id" : "enlightenment",
-  "conduit_uri" : "https://phab.enlightenment.org/"
+  "project_id" : "enlightenment-git",
+  "projects" : "enlightenment-git",
+  "conduit_uri" : "https://phab.enlightenment.org/",
+  "phabricator.uri" : "https://phab.enlightenment.org/"
 }
